--- a/ansible-pi/playbook.yml
+++ b/ansible-pi/playbook.yml
@@ -2,7 +2,7 @@
 
 - name: Ansible Playbook for configuring brand new Raspberry Pi
 
-  hosts: all
+  hosts: test
   roles:
     - pi
   remote_user: pi
